# MCP_Space_Life_Science_KGs

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: COMPLETE_INTEGRATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  SPOKE_PRIMEKG_INTEGRATION.md  api_reference.md  architecture.md  claude_desktop_config.md  installation.md  node_mappings.md  quickstart.md
examples/: 01_space_biology_to_therapeutics.ipynb  02_disease_mechanism_discovery.ipynb  03_geospatial_disease_patterns.ipynb  04_environmental_health.ipynb  05_complete_mechanism_analysis.ipynb
src/mcp_space_life_sciences/: __init__.py  client_new.py  cypher_queries.py  server.py  sparql_queries.py  utils.py
tests/: test_genelab_connection.py  test_integration.py  test_primekg_connection.py  test_spoke_okn_connection.py
